--- a/src/pathFinding/Dijkstra/Node.css
+++ b/src/pathFinding/Dijkstra/Node.css
@@ -1,13 +1,19 @@
 .Node {
     outline: 1px solid black;
-    background-color: wheat;
     width: 25px;
     height: 25px;
     display: inline-block;
+    background-color: wheat;
 }
 .node-start{
     background-color: blue;
 }
 .node-finish{
-    background-color: red;
+    background-color:green;
+}
+.node-wall{
+    background-color: brown;
+}
+.node-visited{
+    background-color: yellow;
 }
