--- a/src/pathFinding/GridAndNode/Node.css
+++ b/src/pathFinding/GridAndNode/Node.css
@@ -14,6 +14,9 @@
 .node-wall{
     background-color: brown;
 }
+.node-weight{
+    background-color: blueviolet;
+}
 .node-visited{
     background-color: yellow;
 }
