partion pathfinding_sorting, speed function, select start_finish node function, update UI, add mergeSort InPlace

--- a/src/pathFinding/GridAndNode/Node.css
+++ b/src/pathFinding/GridAndNode/Node.css
@@ -9,7 +9,7 @@
     background-color: blue;
 }
 .node-finish{
-    background-image: url("../static/finish.svg");
+    background-image: url("../../static/finish.svg");
     background-size:contain;
 }
 @keyframes wallAnimation{
