--- a/src/pathFinding/GridAndNode/Node.css
+++ b/src/pathFinding/GridAndNode/Node.css
@@ -27,13 +27,14 @@
     }
 }
 .node-wall{
-    animation-name: wallAnimation;
+    /* animation-name: wallAnimation; */
     animation-duration: 0.3s;
     animation-timing-function: ease-out;
     /* animation-direction: alternate; */
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
     animation-play-state: running;
+    background-color: brown;
 }
 .node-weight{
     background-color: blueviolet;
