--- a/src/SortingVisualize/SortingVisualize.css
+++ b/src/SortingVisualize/SortingVisualize.css
@@ -15,3 +15,12 @@
 .pivot{
     background-color: aquamarine;
 }
+.nav-item{
+    vertical-align: middle;
+}
+.main-btn a{
+    font-size: large;
+}
+.ml-5{
+    margin-left: 5px;
+}
