--- a/src/pathFinding/PathFinding.css
+++ b/src/pathFinding/PathFinding.css
@@ -5,4 +5,29 @@
 }
 .navbar a{
     color: white;
+    font-size: medium;
+}
+.text-inline{
+    margin-top: 12px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+}
+.checkbox{
+    align-self: center;
+}
+.nav-item{
+    vertical-align: middle;
+}
+.main-btn a{
+    font-size: large;
+}
+.selectDiv{
+    vertical-align: middle;
+    align-items: center;
+}
+label{
+    font-size: medium;
 }
